@@ -94,6 +94,7 @@ bool CAppConfig::DoDataExchange(bool bLoad)
 		CFG_INT ( FontSize )
 		CFG_BOOL( AntiAliasFont )
 		CFG_BOOL( HCenterAlign )
+		CFG_BOOL( VCenterAlign )
 		CFG_INT ( CharPaddingX)
 		CFG_INT ( CharPaddingY)
 	END_CONFIG_SECT()
@@ -306,6 +307,7 @@ void CAppConfig::SetToDefault()
 	FontFamily = "Sans";
 	AntiAliasFont = true;
 	HCenterAlign = false;
+	VCenterAlign = false;
 
 	WebBrowser = "mozilla %s";
 	ShowTrayIcon = true;
